# ultrafast-feed

./: CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_baseline_comparison.cpp  bench_spsc_ring_buffer.cpp  bench_xdp_socket.cpp
cmake/: CompileOptions.cmake  FindDependencies.cmake
docs/: CMakeLists.txt  architecture.md  pipeline.md
include/ultrafast/: feed_event.hpp  feed_handler.hpp  packet.hpp  pcap_reader.hpp  pcap_writer.hpp  spsc_ring_buffer.hpp  synthetic_sender.hpp  umem.hpp  xdp_socket.hpp
src/: CMakeLists.txt  feed_handler.cpp  umem.cpp  xdp_socket.cpp
tests/: CMakeLists.txt  test_feed_handler.cpp  test_replay.cpp  test_spsc_ring_buffer.cpp  test_umem.cpp  test_xdp_socket.cpp
tools/: CMakeLists.txt  replay_feed.cpp  setup_veth.sh  test_sender.cpp
